wallet settings via ui